[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matten"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8, <3.11"
dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=0.10.0, <1.0.0",
    "torch_geometric>=2.3.0",
    "torch_scatter==2.1.1",
    "e3nn",
    "ase",
    "pymatgen",
    "loguru",
    "torchtyping",
]

[project.optional-dependencies]
test = ["pytest"]
strict = [
    "torch==2.0.0",
    "pytorch-lightning==2.0.0",
    "torchmetrics==0.10.0",
    "torch_geometric==2.3.0",
    "torch_scatter==2.1.1",
    "e3nn==0.5.1",
]


[tool.black]
line-length = 88

# Add src_paths so that import of current package will be placed at the bottom.
[tool.isort]
src_paths = ["src", "tests"]
