[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matten"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8, <3.12"
dependencies = [
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=0.10.0, <1.0.0",
    "torch_geometric>=2.3.0",
    "torch_scatter",
    "e3nn",
    "scikit-learn",
    "ase",
    "pymatgen",
    "torchtyping",
    "loguru",
]

[project.optional-dependencies]
strict = [
    "pytorch-lightning==2.4.0",
    "torchmetrics==0.11.4",
    "torch_geometric==2.6.1",
    "torch_scatter==2.1.2",
    "e3nn==0.5.1",
    "scikit-learn==1.5.2",
    "ase==3.23.0",
    "pymatgen==2024.10.3",
    "torchtyping==0.1.5",
    "loguru==0.7.2",
]

test = ["pytest"]

[tool.black]
line-length = 88

# Add src_paths so that import of current package will be placed at the bottom.
[tool.isort]
src_paths = ["src", "tests"]
